# plank

./: .dockerignore  .env  .gitattributes  .gitignore  .travis.yml  Cargo.toml  Dockerfile  README.md
js/: index.js  main.css  package.json  webpack.config.js
js/components/: Post.css  Post.js
js/lib/api/: Api.js  HttpApi.js
js/lib/api/actions/: FetchPosts.js
js/lib/components/: BoardPage.js
js/lib/components/post/: OriginalPost.js  Post.css  Post.js
migrations/20170715040518_create_posts/: up.sql
migrations/20170715041748_add_post_replies/: up.sql
src/: main.rs
src/config/: mod.rs
src/middleware/: log.rs  mod.rs  pool.rs
src/model/: mod.rs  post.rs
src/pool/: mod.rs
src/route/: get_posts.rs  mod.rs  new_post.rs
static/: index.html
