[package]
name = "plank"
version = "0.1.0"
authors = ["Forest Belton <forest@homolo.gy>"]

[dependencies]
# web framework
iron = "0.5.1"
router = "0.5.1"

# environment variables
envy = "0.3.1"
dotenv = "0.10.1"

# (de)serialization
serde = "1.0.10"
serde_derive = "1.0.10"

# database
diesel = { version = "0.14.1", features = ["sqlite"] }
diesel_codegen = { version = "0.14.0", features = ["sqlite"] }
r2d2 = "0.7.3"
r2d2-diesel = "0.14.0"