[package]
name = "plank"
version = "0.1.0"
authors = ["Forest Belton <forest@homolo.gy>"]

[dependencies]
# web framework
iron = "0.5.1"
router = "0.5.1"
params = "0.6.0"

# environment variables
envy = "0.3.1"
dotenv = "0.10.1"

# (de)serialization
serde = "1.0.10"
serde_json = "1.0.2"
serde_derive = "1.0.10"

# database
diesel = { version = "0.14.1", features = ["sqlite", "chrono"] }
diesel_codegen = { version = "0.14.0", features = ["sqlite"] }
r2d2 = "0.7.3"
r2d2-diesel = "0.14.0"

# misc / utility
uuid = { version = "0.5.1", features = ["v4"] }
chrono = { version = "0.4.0", features = ["serde"] }
log = "0.3.8"
fern = "0.4.0"